bugfix MD3 migration: align mat-select boxed below input field

--- a/frontend/nextcp-ui/src/scss/material-design-theme.scss
+++ b/frontend/nextcp-ui/src/scss/material-design-theme.scss
@@ -43,3 +43,7 @@ html {
 :root {
   --mdc-outlined-text-field-label-text-font : HK Grotesk, Lato, Quicksand, sans-serif;
 }
+
+.cdk-overlay-pane {
+  position: absolute;
+}
